Implementacja drag and drop

--- a/szablon/blocks/main.sass
+++ b/szablon/blocks/main.sass
@@ -37,6 +37,8 @@ $fa-font-path: "../blocks/vendor/font-awesome/fonts"
 @import "googleMaps/googleMaps"
 @import "header/header"
 
+@import "drag/dragger"
+
 @import "panelWelcome/panelWelcome"
 @import "panelLogin/panelLogin"
 @import "panelRegister/panelRegister"
