--- a/szablon/jade/_head.jade
+++ b/szablon/jade/_head.jade
@@ -18,6 +18,7 @@ head
     <!-- MAPY GOOGLA -->
     script(src='http://maps.google.com/maps/api/js')
     script(src='https://jquery-xml2json-plugin.googlecode.com/svn/trunk/jquery.xml2json.js')
+    script(src="//code.jquery.com/ui/1.11.4/jquery-ui.js")
     <!-- MAPY GOOGLA -->
 
     script(src='scripts/vendor.min.js')
