--- a/szablon/jade/_header.jade
+++ b/szablon/jade/_header.jade
@@ -56,11 +56,11 @@
           span.headerProfile__buttonIconBG
             .headerProfile__buttonIcon.fa.fa-user
           | Moje Konto
-      li.headerProfile__item#panel-ustawieniaButton
+      li.headerProfile__item#panel-InformacjeButton
         span.headerProfile__button
           span.headerProfile__buttonIconBG
-            .headerProfile__buttonIcon.fa.fa-cogs
-          | Ustawienia
+            .headerProfile__buttonIcon.fa.fa-info-circle
+          | Informacje
       li.headerProfile__item#panel-wylogujButton
         span.headerProfile__button
           span.headerProfile__buttonIconBG
