--- a/szablon/jade/main.jade
+++ b/szablon/jade/main.jade
@@ -160,86 +160,86 @@ html( lang="pl")
                 input(placeholder="Biletomat")
             .panelAutobusy__contentList
 
-            .panelList
-              .panelList__header
-                .panelList__headeritemType Typ
-                .panelList__headeritemName Numer Autobusu
-                .panelList__headeritemStatus Status
-                .panelList__headeritemBiletomat Biletomat
-                .panelList__headeritemnavigation
-              .panelList__content
-                .panelList__item
-                  .panelList__itemType
-                    .fa.fa-bus
-                  .panelList__itemName 102
-                  .panelList__itemStatus Aktywny
-                  .panelList__itemBiletomat
-                    .fa.fa-times-circle-o
-                  .panelList__navigation Zobacz szczegóły
-                .panelList__item
-                  .panelList__itemType
-                    .fa.fa-bus
-                  .panelList__itemName 103
-                  .panelList__itemStatus Aktywny
-                  .panelList__itemBiletomat
-                    .fa.fa-times-circle-o
-                  .panelList__navigation Zobacz szczegóły
-                .panelList__item
-                  .panelList__itemType
-                    .fa.fa-bus
-                  .panelList__itemName 5
-                  .panelList__itemStatus Aktywny
-                  .panelList__itemBiletomat
-                    .fa.fa-times-circle-o
-                  .panelList__navigation Zobacz szczegóły
-                .panelList__item
-                  .panelList__itemType
-                    .fa.fa-bus
-                  .panelList__itemName 6
-                  .panelList__itemStatus Aktywny
-                  .panelList__itemBiletomat
-                    .fa.fa-times-circle-o
-                  .panelList__navigation Zobacz szczegóły
-                .panelList__item
-                  .panelList__itemType
-                    .fa.fa-bus
-                  .panelList__itemName 7
-                  .panelList__itemStatus Aktywny
-                  .panelList__itemBiletomat
-                    .fa.fa-times-circle-o
-                  .panelList__navigation Zobacz szczegóły
-                .panelList__item
-                  .panelList__itemType
-                    .fa.fa-bus
-                  .panelList__itemName 8
-                  .panelList__itemStatus Aktywny
-                  .panelList__itemBiletomat
-                    .fa.fa-times-circle-o
-                  .panelList__navigation Zobacz szczegóły
-                .panelList__item
-                  .panelList__itemType
-                    .fa.fa-bus
-                  .panelList__itemName 9
-                  .panelList__itemStatus Aktywny
-                  .panelList__itemBiletomat
-                    .fa.fa-times-circle-o
-                  .panelList__navigation Zobacz szczegóły
-                .panelList__item
-                  .panelList__itemType
-                    .fa.fa-bus
-                  .panelList__itemName 10
-                  .panelList__itemStatus Aktywny
-                  .panelList__itemBiletomat
-                    .fa.fa-times-circle-o
-                  .panelList__navigation Zobacz szczegóły
-                .panelList__item
-                  .panelList__itemType
-                    .fa.fa-bus
-                  .panelList__itemName 11
-                  .panelList__itemStatus Aktywny
-                  .panelList__itemBiletomat
-                    .fa.fa-times-circle-o
-                  .panelList__navigation Zobacz szczegóły
+              .panelList
+                .panelList__header
+                  .panelList__headeritemType Typ
+                  .panelList__headeritemName Numer Autobusu
+                  .panelList__headeritemStatus Status
+                  .panelList__headeritemBiletomat Biletomat
+                  .panelList__headeritemnavigation Szczegóły
+                .panelList__content
+                  .panelList__item
+                    .panelList__itemType
+                      .fa.fa-bus
+                    .panelList__itemName 102
+                    .panelList__itemStatus Aktywny
+                    .panelList__itemBiletomat
+                      .fa.fa-times-circle-o
+                    .panelList__navigation Zobacz szczegóły
+                  .panelList__item
+                    .panelList__itemType
+                      .fa.fa-bus
+                    .panelList__itemName 103
+                    .panelList__itemStatus Aktywny
+                    .panelList__itemBiletomat
+                      .fa.fa-times-circle-o
+                    .panelList__navigation Zobacz szczegóły
+                  .panelList__item
+                    .panelList__itemType
+                      .fa.fa-bus
+                    .panelList__itemName 5
+                    .panelList__itemStatus Aktywny
+                    .panelList__itemBiletomat
+                      .fa.fa-times-circle-o
+                    .panelList__navigation Zobacz szczegóły
+                  .panelList__item
+                    .panelList__itemType
+                      .fa.fa-bus
+                    .panelList__itemName 6
+                    .panelList__itemStatus Aktywny
+                    .panelList__itemBiletomat
+                      .fa.fa-times-circle-o
+                    .panelList__navigation Zobacz szczegóły
+                  .panelList__item
+                    .panelList__itemType
+                      .fa.fa-bus
+                    .panelList__itemName 7
+                    .panelList__itemStatus Aktywny
+                    .panelList__itemBiletomat
+                      .fa.fa-times-circle-o
+                    .panelList__navigation Zobacz szczegóły
+                  .panelList__item
+                    .panelList__itemType
+                      .fa.fa-bus
+                    .panelList__itemName 8
+                    .panelList__itemStatus Aktywny
+                    .panelList__itemBiletomat
+                      .fa.fa-times-circle-o
+                    .panelList__navigation Zobacz szczegóły
+                  .panelList__item
+                    .panelList__itemType
+                      .fa.fa-bus
+                    .panelList__itemName 9
+                    .panelList__itemStatus Aktywny
+                    .panelList__itemBiletomat
+                      .fa.fa-times-circle-o
+                    .panelList__navigation Zobacz szczegóły
+                  .panelList__item
+                    .panelList__itemType
+                      .fa.fa-bus
+                    .panelList__itemName 10
+                    .panelList__itemStatus Aktywny
+                    .panelList__itemBiletomat
+                      .fa.fa-times-circle-o
+                    .panelList__navigation Zobacz szczegóły
+                  .panelList__item
+                    .panelList__itemType
+                      .fa.fa-bus
+                    .panelList__itemName 11
+                    .panelList__itemStatus Aktywny
+                    .panelList__itemBiletomat
+                      .fa.fa-times-circle-o
+                    .panelList__navigation Zobacz szczegóły
 
           span.panelAutobusy__close
             span.panelAutobusy__icon.fa.fa-times
