--- a/szablon/blocks/panelAutobusy/_panelAutobusy.sass
+++ b/szablon/blocks/panelAutobusy/_panelAutobusy.sass
@@ -194,7 +194,7 @@
 
   &__content
     border-top: 2px solid #D2E3E9
-    padding: 20px
+    padding-top: 10px
     &__Title
       font-family: Lato, sans-serif
       font-size: 18px
