--- a/szablon/blocks/panelList/_panelList.sass
+++ b/szablon/blocks/panelList/_panelList.sass
@@ -5,10 +5,16 @@
     display: flex
     border: 1px solid transparent
     overflow: hidden
+    margin-right: 15px
+    +PHONE_ONLY
+      margin-right: 0
   &__content
     border: 1px solid #D2E3E9
     //min-height: 200px
-    height: auto
+    height: 200px
+    +PHONE_ONLY
+      height: auto
+      overflow-y: hidden
     //max-height: 500px
     overflow-y: scroll
   &__item
@@ -46,6 +52,8 @@
     font-weight: 700
     color: #9C969C
     padding: 0 5px
+    +PHONE_ONLY
+      font-size: 9px
   &__itemName
     padding: 0 10px
     height: 40px
@@ -57,6 +65,9 @@
     font-size: 10px
     color: #333
     font-weight: 700
+    +PHONE_ONLY
+      flex-basis: 100px
+      text-align: center
   &__headeritemName
     padding: 0 10px
     height: 20px
@@ -68,6 +79,10 @@
     font-size: 10px
     color: #9C969C
     font-weight: 700
+    +PHONE_ONLY
+      font-size: 9px
+      flex-basis: 100px
+      text-align: center
   &__itemStatus
     padding: 0 10px
     height: 40px
@@ -88,12 +103,14 @@
     font-size: 10px
     color: #9C969C
     font-weight: 700
+    +PHONE_ONLY
+      font-size: 9px
   &__itemBiletomat
     padding: 0 10px
     height: 40px
     line-height: 40px
     flex-basis: 100px
-    //background: blue
+    //background: red
     font-size: 10px
     color: #333
     font-weight: 700
@@ -106,11 +123,13 @@
     height: 20px
     line-height: 20px
     flex-basis: 100px
-    //background: blue
+    //background: red
     text-align: center
     font-size: 10px
     color: #9C969C
     font-weight: 700
+    +PHONE_ONLY
+      font-size: 9px
   &__navigation
     padding: 0 10px
     height: 40px
@@ -123,6 +142,10 @@
     font-weight: 700
     opacity: 0
     overflow: hidden
+    +PHONE_ONLY
+      opacity: 1
+      color: #222222
+      font-size: 9px
   &__headeritemnavigation
     padding: 0 10px
     height: 20px
@@ -133,4 +156,6 @@
     font-size: 10px
     color: #9C969C
     font-weight: 700
+    +PHONE_ONLY
+      font-size: 8px
 
