--- a/szablon/blocks/panelAutobusy/_panelAutobusy.sass
+++ b/szablon/blocks/panelAutobusy/_panelAutobusy.sass
@@ -11,15 +11,12 @@
   left: 0
   z-index: 100
   opacity: 1
-
   margin: 50px auto 0
-  background-color: rgba(255, 255, 255, 1)
-  border: 1px solid rgba(255, 255, 255, 0.5)
+  background-color: rgba(255, 255, 255,0.95)
+  border: 1px solid rgba(255, 255, 255, 1)
   border-radius: 5px
-  box-shadow: 0 60px 80px 0 rgba(0, 0, 0, 0.4)
-
+  box-shadow: 0 0px 10px 0 rgba(0, 0, 0, 0.3)
   overflow: hidden
-
   transform: scale(1, 1)
   +TAB_MAX
     position: relative
@@ -42,7 +39,7 @@
     letter-spacing: 2px
     text-align: left
     //text-transform: uppercase
-    color: #4AAED4
+    //color: #4AAED4
     +PHONE_ONLY
       text-align: center
       font-size: 19px
@@ -179,22 +176,22 @@
       flex-shrink: 1
       font-size: 10px
       text-transform: uppercase
-      background: #4AAED4
+      background: rgba(57, 73, 171, 0.8)
       color: white
       border: none
       padding: 10px 10px
-      border-radius: 5px
+      //border-radius: 5px
       max-width: 150px
       width: 100%
       margin-right: 5px
       text-decoration: none !important
       text-align: center
       &:hover
-        background: #98D3EA
+        background: rgb(57, 73, 171)
 
   &__content
-    border-top: 2px solid #D2E3E9
-    padding-top: 10px
+    //border-top: 2px solid #D2E3E9
+    padding-top: 15px
     &__Title
       font-family: Lato, sans-serif
       font-size: 18px
@@ -227,10 +224,10 @@
           border-top: 0
           border-left: 0
           border-right: 0
-          border-bottom: 2px solid #D2E3E9
+          border-bottom: 2px solid rgba(156, 150, 156, 0.25)
           font-size: 12px
           &:focus
-            border-bottom: 2px solid #4AAED4
+            border-bottom: 2px solid rgba(57, 73, 171, 0.5)
         +PHONE_ONLY
           flex-basis: 100%
           padding: 0
@@ -238,8 +235,8 @@
   &__close
     transition: opacity 0.36s ease
     position: absolute
-    top: 0px
-    right: 3px
+    top: 10px
+    right: 10px
     color: #222222
     cursor: pointer
     opacity: 0.4
