--- a/szablon/blocks/panelList/_panelList.sass
+++ b/szablon/blocks/panelList/_panelList.sass
@@ -24,9 +24,11 @@
     display: flex
     cursor: pointer
     &:nth-of-type(odd)
-      background-color: rgba(74, 174, 212, 0.1)
+      //background-color: rgba(74, 174, 212, 0.1)
+      background-color: rgba(57, 73, 171, 0.1)
     &:hover
-      background-color: rgba(74, 174, 212, 0.5)
+      //background-color: rgba(74, 174, 212, 0.5)
+      background-color: rgba(57, 73, 171, 0.5)
       .panelList__navigation
         opacity: 1
   &__itemType
