--- a/szablon/blocks/panelLogin/_panelLogin.sass
+++ b/szablon/blocks/panelLogin/_panelLogin.sass
@@ -16,7 +16,7 @@
   background-color: rgba(255, 255, 255, 0.95)
   border: 1px solid rgba(255, 255, 255, 1)
   border-radius: 5px
-  box-shadow: 0px 0px 45px 0px rgba(0, 0, 0, 0.45)
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3)
 
   overflow: hidden
 
@@ -44,7 +44,7 @@
     letter-spacing: 2px
     text-align: center
     //text-transform: uppercase
-    color: #4AAED4
+    color: rgba(57, 73, 171, 0.8)
   &__text
     font-family: Lato, sans-serif
     font-weight: 700
@@ -107,29 +107,29 @@
       max-width: 300px
       width: 100%
       display: block
-      margin: 0px auto
-      padding: 3px 10px
+      margin: 5px auto
+      padding: 5px 10px
       padding-left: 40px
       border-radius: 0
       border-top: 0
       border-left: 0
       border-right: 0
-      border-bottom: 2px solid #D2E3E9
+      //border-bottom: 2px solid #D2E3E9
+      border-bottom: 2px solid rgba(156, 150, 156, 0.25)
       font-size: 16px
       &:focus
-        border-bottom: 2px solid #98D3EA
+        border-bottom: 2px solid rgba(57, 73, 171, 0.5)
       &:focus + i
-        color: #4AAED4
+        color: rgba(57, 73, 171, 0.8)
+
 
     .remembermebox
-      margin-top: 0
-      margin-bottom: 0
+      margin: 15px auto
     label
-      margin-top: 5px
+      //margin-top: 5px
       display: inline-block
       height: 30px
       cursor: pointer
-
       color: #9C969C
       font-weight: 400
       max-width: 300px
@@ -147,7 +147,7 @@
           content: ''
           width: 10px
           height: 2px
-          background: white
+          background: #fff
           position: absolute
           transition: all .2s ease-in-out 0s
         &:before
@@ -163,18 +163,21 @@
     .check
       display: none
     .check:checked + label
-      color: #4AAED4
+      //color: #4AAED4
+      color: rgba(57, 73, 171, 1)
       .icon
-        background: #4AAED4
+        //background: #4AAED4
+        background: rgba(57, 73, 171, 0.8)
       .icon:before
         transform: scale(1) rotate(45deg)
       .icon:after
         transform: scale(1) rotate(-45deg)
 
     button
-      margin-top: 20px
+      //margin-top: 20px
       text-transform: uppercase
-      background: #4AAED4
+      //background: #4AAED4
+      background: rgba(57, 73, 171, 0.8)
       color: white
       border: none
       padding: 15px 20px
@@ -182,7 +185,7 @@
       max-width: 300px
       width: 100%
       &:hover
-        background: #98D3EA
+        background: rgb(57, 73, 171)
 
   &__formwrapper
     position: relative
@@ -198,7 +201,7 @@
   &__close
     transition: opacity 0.36s ease
     position: absolute
-    top: 8px
+    top: 10px
     right: 10px
     color: #222222
     cursor: pointer
