--- a/szablon/css/main.css
+++ b/szablon/css/main.css
@@ -5811,10 +5811,10 @@ a.tabnav-extra:hover {
   z-index: 100;
   opacity: 1;
   margin: 0 auto;
-  background-color: white;
-  border: 1px solid rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.95);
+  border: 1px solid white;
   border-radius: 5px;
-  box-shadow: 0 60px 80px 0 rgba(0, 0, 0, 0.4);
+  box-shadow: 0 0px 10px 0 rgba(0, 0, 0, 0.3);
   overflow: hidden;
   -webkit-transform: scale(1, 1);
       -ms-transform: scale(1, 1);
@@ -5886,8 +5886,8 @@ a.tabnav-extra:hover {
 .panelWelcome__close {
   transition: opacity 0.36s ease;
   position: absolute;
-  top: 0px;
-  right: 3px;
+  top: 10px;
+  right: 10px;
   color: #222222;
   cursor: pointer;
   opacity: 0.4;
@@ -5991,7 +5991,7 @@ a.tabnav-extra:hover {
   background-color: rgba(255, 255, 255, 0.95);
   border: 1px solid white;
   border-radius: 5px;
-  box-shadow: 0px 0px 45px 0px rgba(0, 0, 0, 0.45);
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3);
   overflow: hidden;
   -webkit-transform: scale(1, 1);
       -ms-transform: scale(1, 1);
@@ -6028,7 +6028,7 @@ a.tabnav-extra:hover {
   font-size: 25.5px;
   letter-spacing: 2px;
   text-align: center;
-  color: #4AAED4;
+  color: rgba(57, 73, 171, 0.8);
 }
 
 .panelLogin__text {
@@ -6109,32 +6109,30 @@ a.tabnav-extra:hover {
   max-width: 300px;
   width: 100%;
   display: block;
-  margin: 0px auto;
-  padding: 3px 10px;
+  margin: 5px auto;
+  padding: 5px 10px;
   padding-left: 40px;
   border-radius: 0;
   border-top: 0;
   border-left: 0;
   border-right: 0;
-  border-bottom: 2px solid #D2E3E9;
+  border-bottom: 2px solid rgba(156, 150, 156, 0.25);
   font-size: 16px;
 }
 
 .panelLogin__form input:focus {
-  border-bottom: 2px solid #98D3EA;
+  border-bottom: 2px solid rgba(57, 73, 171, 0.5);
 }
 
 .panelLogin__form input:focus + i {
-  color: #4AAED4;
+  color: rgba(57, 73, 171, 0.8);
 }
 
 .panelLogin__form .remembermebox {
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 15px auto;
 }
 
 .panelLogin__form label {
-  margin-top: 5px;
   display: inline-block;
   height: 30px;
   cursor: pointer;
@@ -6159,7 +6157,7 @@ a.tabnav-extra:hover {
   content: '';
   width: 10px;
   height: 2px;
-  background: white;
+  background: #fff;
   position: absolute;
   transition: all .2s ease-in-out 0s;
 }
@@ -6186,11 +6184,11 @@ a.tabnav-extra:hover {
 }
 
 .panelLogin__form .check:checked + label {
-  color: #4AAED4;
+  color: #3949ab;
 }
 
 .panelLogin__form .check:checked + label .icon {
-  background: #4AAED4;
+  background: rgba(57, 73, 171, 0.8);
 }
 
 .panelLogin__form .check:checked + label .icon:before {
@@ -6206,9 +6204,8 @@ a.tabnav-extra:hover {
 }
 
 .panelLogin__form button {
-  margin-top: 20px;
   text-transform: uppercase;
-  background: #4AAED4;
+  background: rgba(57, 73, 171, 0.8);
   color: white;
   border: none;
   padding: 15px 20px;
@@ -6218,7 +6215,7 @@ a.tabnav-extra:hover {
 }
 
 .panelLogin__form button:hover {
-  background: #98D3EA;
+  background: #3949ab;
 }
 
 .panelLogin__formwrapper {
@@ -6242,7 +6239,7 @@ a.tabnav-extra:hover {
 .panelLogin__close {
   transition: opacity 0.36s ease;
   position: absolute;
-  top: 8px;
+  top: 10px;
   right: 10px;
   color: #222222;
   cursor: pointer;
@@ -6268,28 +6265,20 @@ a.tabnav-extra:hover {
   max-width: 530px;
   width: 100%;
   height: auto;
-  top: calc(50% - 170px);
+  top: calc(50% - 187.5px);
   right: 0;
   left: 0;
   z-index: 100;
   opacity: 1;
   margin: 0 auto;
-  background-color: white;
-  border: 1px solid rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.95);
+  border: 1px solid white;
   border-radius: 5px;
-  box-shadow: 0 60px 80px 0 rgba(0, 0, 0, 0.4);
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3);
   overflow: hidden;
   -webkit-transform: scale(1, 1);
       -ms-transform: scale(1, 1);
           transform: scale(1, 1);
-}
-
-@media (max-width: 767px) {
-  .panelRegister {
-    max-width: 100%;
-    position: relative;
-    margin: 50px auto;
-  }
 }
 
 .panelRegister.-hidden {
@@ -6299,6 +6288,14 @@ a.tabnav-extra:hover {
       -ms-transform: scale(0.5, 0.5);
           transform: scale(0.5, 0.5);
   display: none;
+}
+
+@media (max-width: 767px) {
+  .panelRegister {
+    max-width: 100%;
+    position: relative;
+    margin: 50px auto 0;
+  }
 }
 
 .panelRegister__wrapper {
@@ -6314,7 +6311,7 @@ a.tabnav-extra:hover {
   font-size: 25.5px;
   letter-spacing: 2px;
   text-align: center;
-  color: #4AAED4;
+  color: rgba(57, 73, 171, 0.8);
 }
 
 .panelRegister__text {
@@ -6395,106 +6392,29 @@ a.tabnav-extra:hover {
   max-width: 300px;
   width: 100%;
   display: block;
-  margin: 0px auto;
-  padding: 3px 10px;
+  margin: 5px auto;
+  padding: 5px 10px;
   padding-left: 40px;
   border-radius: 0;
   border-top: 0;
   border-left: 0;
   border-right: 0;
-  border-bottom: 2px solid #D2E3E9;
+  border-bottom: 2px solid rgba(156, 150, 156, 0.25);
   font-size: 16px;
 }
 
 .panelRegister__form input:focus {
-  border-bottom: 2px solid #98D3EA;
+  border-bottom: 2px solid rgba(57, 73, 171, 0.5);
 }
 
 .panelRegister__form input:focus + i {
-  color: #4AAED4;
-}
-
-.panelRegister__form .remembermebox {
-  margin-top: 0;
-  margin-bottom: 20px;
-}
-
-.panelRegister__form label {
-  margin-top: 5px;
-  display: inline-block;
-  height: 30px;
-  cursor: pointer;
-  color: #9C969C;
-  font-weight: 400;
-  max-width: 300px;
-  line-height: 30px;
-}
-
-.panelRegister__form label .icon {
-  line-height: 30px;
-  width: 17px;
-  height: 18px;
-  border-radius: 2px;
-  position: relative;
-  display: inline-block;
-  border: 1px solid;
-  top: 5px;
-}
-
-.panelRegister__form label .icon:before, .panelRegister__form label .icon:after {
-  content: '';
-  width: 10px;
-  height: 2px;
-  background: white;
-  position: absolute;
-  transition: all .2s ease-in-out 0s;
-}
-
-.panelRegister__form label .icon:before {
-  left: 3px;
-  width: 5px;
-  bottom: 6px;
-  -webkit-transform: scale(0) rotate(0);
-      -ms-transform: scale(0) rotate(0);
-          transform: scale(0) rotate(0);
-}
-
-.panelRegister__form label .icon:after {
-  top: 6px;
-  right: 0;
-  -webkit-transform: scale(0) rotate(0);
-      -ms-transform: scale(0) rotate(0);
-          transform: scale(0) rotate(0);
-}
-
-.panelRegister__form .check {
-  display: none;
-}
-
-.panelRegister__form .check:checked + label {
-  color: #4AAED4;
-}
-
-.panelRegister__form .check:checked + label .icon {
-  background: #4AAED4;
-}
-
-.panelRegister__form .check:checked + label .icon:before {
-  -webkit-transform: scale(1) rotate(45deg);
-      -ms-transform: scale(1) rotate(45deg);
-          transform: scale(1) rotate(45deg);
-}
-
-.panelRegister__form .check:checked + label .icon:after {
-  -webkit-transform: scale(1) rotate(-45deg);
-      -ms-transform: scale(1) rotate(-45deg);
-          transform: scale(1) rotate(-45deg);
+  color: rgba(57, 73, 171, 0.8);
 }
 
 .panelRegister__form button {
-  margin-top: 20px;
+  margin-top: 15px;
   text-transform: uppercase;
-  background: #4AAED4;
+  background: rgba(57, 73, 171, 0.8);
   color: white;
   border: none;
   padding: 15px 20px;
@@ -6504,7 +6424,7 @@ a.tabnav-extra:hover {
 }
 
 .panelRegister__form button:hover {
-  background: #98D3EA;
+  background: #3949ab;
 }
 
 .panelRegister__formwrapper {
@@ -6528,8 +6448,8 @@ a.tabnav-extra:hover {
 .panelRegister__close {
   transition: opacity 0.36s ease;
   position: absolute;
-  top: 0px;
-  right: 3px;
+  top: 10px;
+  right: 10px;
   color: #222222;
   cursor: pointer;
   opacity: 0.4;
@@ -6554,28 +6474,20 @@ a.tabnav-extra:hover {
   max-width: 530px;
   width: 100%;
   height: auto;
-  top: calc(50% - 170px);
+  top: calc(50% - 187.5px);
   right: 0;
   left: 0;
   z-index: 100;
   opacity: 1;
   margin: 0 auto;
-  background-color: white;
-  border: 1px solid rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.95);
+  border: 1px solid white;
   border-radius: 5px;
-  box-shadow: 0 60px 80px 0 rgba(0, 0, 0, 0.4);
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3);
   overflow: hidden;
   -webkit-transform: scale(1, 1);
       -ms-transform: scale(1, 1);
           transform: scale(1, 1);
-}
-
-@media (max-width: 767px) {
-  .panelResetPassword {
-    max-width: 100%;
-    position: relative;
-    margin: 50px auto;
-  }
 }
 
 .panelResetPassword.-hidden {
@@ -6585,6 +6497,14 @@ a.tabnav-extra:hover {
       -ms-transform: scale(0.5, 0.5);
           transform: scale(0.5, 0.5);
   display: none;
+}
+
+@media (max-width: 767px) {
+  .panelResetPassword {
+    max-width: 100%;
+    position: relative;
+    margin: 50px auto 0;
+  }
 }
 
 .panelResetPassword__wrapper {
@@ -6600,7 +6520,7 @@ a.tabnav-extra:hover {
   font-size: 25.5px;
   letter-spacing: 2px;
   text-align: center;
-  color: #4AAED4;
+  color: rgba(57, 73, 171, 0.8);
 }
 
 .panelResetPassword__text {
@@ -6681,106 +6601,29 @@ a.tabnav-extra:hover {
   max-width: 300px;
   width: 100%;
   display: block;
-  margin: 0px auto;
-  padding: 3px 10px;
+  margin: 5px auto;
+  padding: 5px 10px;
   padding-left: 40px;
   border-radius: 0;
   border-top: 0;
   border-left: 0;
   border-right: 0;
-  border-bottom: 2px solid #D2E3E9;
+  border-bottom: 2px solid rgba(156, 150, 156, 0.25);
   font-size: 16px;
 }
 
 .panelResetPassword__form input:focus {
-  border-bottom: 2px solid #98D3EA;
+  border-bottom: 2px solid rgba(57, 73, 171, 0.5);
 }
 
 .panelResetPassword__form input:focus + i {
-  color: #4AAED4;
-}
-
-.panelResetPassword__form .remembermebox {
-  margin-top: 0;
-  margin-bottom: 20px;
-}
-
-.panelResetPassword__form label {
-  margin-top: 5px;
-  display: inline-block;
-  height: 30px;
-  cursor: pointer;
-  color: #9C969C;
-  font-weight: 400;
-  max-width: 300px;
-  line-height: 30px;
-}
-
-.panelResetPassword__form label .icon {
-  line-height: 30px;
-  width: 17px;
-  height: 18px;
-  border-radius: 2px;
-  position: relative;
-  display: inline-block;
-  border: 1px solid;
-  top: 5px;
-}
-
-.panelResetPassword__form label .icon:before, .panelResetPassword__form label .icon:after {
-  content: '';
-  width: 10px;
-  height: 2px;
-  background: white;
-  position: absolute;
-  transition: all .2s ease-in-out 0s;
-}
-
-.panelResetPassword__form label .icon:before {
-  left: 3px;
-  width: 5px;
-  bottom: 6px;
-  -webkit-transform: scale(0) rotate(0);
-      -ms-transform: scale(0) rotate(0);
-          transform: scale(0) rotate(0);
-}
-
-.panelResetPassword__form label .icon:after {
-  top: 6px;
-  right: 0;
-  -webkit-transform: scale(0) rotate(0);
-      -ms-transform: scale(0) rotate(0);
-          transform: scale(0) rotate(0);
-}
-
-.panelResetPassword__form .check {
-  display: none;
-}
-
-.panelResetPassword__form .check:checked + label {
-  color: #4AAED4;
-}
-
-.panelResetPassword__form .check:checked + label .icon {
-  background: #4AAED4;
-}
-
-.panelResetPassword__form .check:checked + label .icon:before {
-  -webkit-transform: scale(1) rotate(45deg);
-      -ms-transform: scale(1) rotate(45deg);
-          transform: scale(1) rotate(45deg);
-}
-
-.panelResetPassword__form .check:checked + label .icon:after {
-  -webkit-transform: scale(1) rotate(-45deg);
-      -ms-transform: scale(1) rotate(-45deg);
-          transform: scale(1) rotate(-45deg);
+  color: rgba(57, 73, 171, 0.8);
 }
 
 .panelResetPassword__form button {
-  margin-top: 20px;
+  margin-top: 15px;
   text-transform: uppercase;
-  background: #4AAED4;
+  background: rgba(57, 73, 171, 0.8);
   color: white;
   border: none;
   padding: 15px 20px;
@@ -6790,7 +6633,7 @@ a.tabnav-extra:hover {
 }
 
 .panelResetPassword__form button:hover {
-  background: #98D3EA;
+  background: #3949ab;
 }
 
 .panelResetPassword__formwrapper {
@@ -6822,8 +6665,8 @@ a.tabnav-extra:hover {
 .panelResetPassword__close {
   transition: opacity 0.36s ease;
   position: absolute;
-  top: 0px;
-  right: 3px;
+  top: 10px;
+  right: 10px;
   color: #222222;
   cursor: pointer;
   opacity: 0.4;
@@ -6880,11 +6723,11 @@ a.tabnav-extra:hover {
 }
 
 .panelList__item:nth-of-type(odd) {
-  background-color: rgba(74, 174, 212, 0.1);
+  background-color: rgba(57, 73, 171, 0.1);
 }
 
 .panelList__item:hover {
-  background-color: rgba(74, 174, 212, 0.5);
+  background-color: rgba(57, 73, 171, 0.5);
 }
 
 .panelList__item:hover .panelList__navigation {
@@ -7103,10 +6946,10 @@ a.tabnav-extra:hover {
   z-index: 100;
   opacity: 1;
   margin: 50px auto 0;
-  background-color: white;
-  border: 1px solid rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.95);
+  border: 1px solid white;
   border-radius: 5px;
-  box-shadow: 0 60px 80px 0 rgba(0, 0, 0, 0.4);
+  box-shadow: 0 0px 10px 0 rgba(0, 0, 0, 0.3);
   overflow: hidden;
   -webkit-transform: scale(1, 1);
       -ms-transform: scale(1, 1);
@@ -7141,7 +6984,6 @@ a.tabnav-extra:hover {
   font-size: 25.5px;
   letter-spacing: 2px;
   text-align: left;
-  color: #4AAED4;
 }
 
 @media (max-width: 767px) {
@@ -7354,11 +7196,10 @@ a.tabnav-extra:hover {
           flex-shrink: 1;
   font-size: 10px;
   text-transform: uppercase;
-  background: #4AAED4;
+  background: rgba(57, 73, 171, 0.8);
   color: white;
   border: none;
   padding: 10px 10px;
-  border-radius: 5px;
   max-width: 150px;
   width: 100%;
   margin-right: 5px;
@@ -7367,12 +7208,11 @@ a.tabnav-extra:hover {
 }
 
 .panelAutobusy__navigation__item:hover {
-  background: #98D3EA;
+  background: #3949ab;
 }
 
 .panelAutobusy__content {
-  border-top: 2px solid #D2E3E9;
-  padding-top: 10px;
+  padding-top: 15px;
 }
 
 .panelAutobusy__content__Title {
@@ -7429,12 +7269,12 @@ a.tabnav-extra:hover {
   border-top: 0;
   border-left: 0;
   border-right: 0;
-  border-bottom: 2px solid #D2E3E9;
+  border-bottom: 2px solid rgba(156, 150, 156, 0.25);
   font-size: 12px;
 }
 
 .panelAutobusy__content__Filtr__item input:focus {
-  border-bottom: 2px solid #4AAED4;
+  border-bottom: 2px solid rgba(57, 73, 171, 0.5);
 }
 
 @media (max-width: 767px) {
@@ -7449,8 +7289,8 @@ a.tabnav-extra:hover {
 .panelAutobusy__close {
   transition: opacity 0.36s ease;
   position: absolute;
-  top: 0px;
-  right: 3px;
+  top: 10px;
+  right: 10px;
   color: #222222;
   cursor: pointer;
   opacity: 0.4;
