--- a/szablon/blocks/panelAutobusy/_panelAutobusy.sass
+++ b/szablon/blocks/panelAutobusy/_panelAutobusy.sass
@@ -26,7 +26,8 @@
     z-index: 0
     transform: scale(0.5, 0.5)
     display: none
-
+  &__list
+    max-width: 900px
   &__wrapper
     position: relative
     padding: 20px
