--- a/szablon/jade/_head.jade
+++ b/szablon/jade/_head.jade
@@ -26,4 +26,5 @@ head
     <!-- bower:css -->
     <!-- endbower -->
 
+    link(rel="stylesheet", href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css")
     link(rel='stylesheet', href='css/main.css')
