--- a/szablon/jade/main.jade
+++ b/szablon/jade/main.jade
@@ -145,7 +145,6 @@ html( lang="pl")
           .panelAutobusy__title Panel Zarządzania Autobusami
           .panelAutobusy__subtitle Zarządzanie flotą autobusów.
           .panelAutobusy__navigation
-            a(href="#").panelAutobusy__navigation__item Lista Autobusów
             a(href="#").panelAutobusy__navigation__item#panel-DodajautobusyButton Dodaj Autobus
           .panelAutobusy__content
             .panelAutobusy__content__Title Lista Autobusów
@@ -167,7 +166,7 @@ html( lang="pl")
                   .panelList__headeritemStatus Status
                   .panelList__headeritemBiletomat Biletomat
                   .panelList__headeritemnavigation Szczegóły
-                .panelList__content
+                .panelAutobusy__list.panelList__content
                   .panelList__item
                     .panelList__itemType
                       .fa.fa-bus
