--- a/szablon/jade/main.jade
+++ b/szablon/jade/main.jade
@@ -174,7 +174,7 @@ html( lang="pl")
                     .panelList__itemStatus Aktywny
                     .panelList__itemBiletomat
                       .fa.fa-times-circle-o
-                    .panelList__navigation Zobacz szczegóły
+                    .panelList__navigation Zobacz
                   .panelList__item
                     .panelList__itemType
                       .fa.fa-bus
@@ -182,7 +182,7 @@ html( lang="pl")
                     .panelList__itemStatus Aktywny
                     .panelList__itemBiletomat
                       .fa.fa-times-circle-o
-                    .panelList__navigation Zobacz szczegóły
+                    .panelList__navigation Zobacz
                   .panelList__item
                     .panelList__itemType
                       .fa.fa-bus
@@ -190,7 +190,7 @@ html( lang="pl")
                     .panelList__itemStatus Aktywny
                     .panelList__itemBiletomat
                       .fa.fa-times-circle-o
-                    .panelList__navigation Zobacz szczegóły
+                    .panelList__navigation Zobacz
                   .panelList__item
                     .panelList__itemType
                       .fa.fa-bus
@@ -198,7 +198,7 @@ html( lang="pl")
                     .panelList__itemStatus Aktywny
                     .panelList__itemBiletomat
                       .fa.fa-times-circle-o
-                    .panelList__navigation Zobacz szczegóły
+                    .panelList__navigation Zobacz
                   .panelList__item
                     .panelList__itemType
                       .fa.fa-bus
@@ -206,7 +206,7 @@ html( lang="pl")
                     .panelList__itemStatus Aktywny
                     .panelList__itemBiletomat
                       .fa.fa-times-circle-o
-                    .panelList__navigation Zobacz szczegóły
+                    .panelList__navigation Zobacz
                   .panelList__item
                     .panelList__itemType
                       .fa.fa-bus
@@ -214,7 +214,7 @@ html( lang="pl")
                     .panelList__itemStatus Aktywny
                     .panelList__itemBiletomat
                       .fa.fa-times-circle-o
-                    .panelList__navigation Zobacz szczegóły
+                    .panelList__navigation Zobacz
                   .panelList__item
                     .panelList__itemType
                       .fa.fa-bus
@@ -222,7 +222,7 @@ html( lang="pl")
                     .panelList__itemStatus Aktywny
                     .panelList__itemBiletomat
                       .fa.fa-times-circle-o
-                    .panelList__navigation Zobacz szczegóły
+                    .panelList__navigation Zobacz
                   .panelList__item
                     .panelList__itemType
                       .fa.fa-bus
@@ -230,7 +230,7 @@ html( lang="pl")
                     .panelList__itemStatus Aktywny
                     .panelList__itemBiletomat
                       .fa.fa-times-circle-o
-                    .panelList__navigation Zobacz szczegóły
+                    .panelList__navigation Zobacz
                   .panelList__item
                     .panelList__itemType
                       .fa.fa-bus
@@ -238,7 +238,7 @@ html( lang="pl")
                     .panelList__itemStatus Aktywny
                     .panelList__itemBiletomat
                       .fa.fa-times-circle-o
-                    .panelList__navigation Zobacz szczegóły
+                    .panelList__navigation Zobacz
           span.panelAutobusy__close
             span.panelAutobusy__icon.fa.fa-times
 
