--- a/szablon/blocks/panelList/_panelList.sass
+++ b/szablon/blocks/panelList/_panelList.sass
@@ -12,7 +12,7 @@
     border: 1px solid #D2E3E9
     //min-height: 200px
     height: 200px
-    +PHONE_ONLY
+    +TAB_MAX
       height: auto
       overflow-y: hidden
     //max-height: 500px
